...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNotifyWaiting"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:insetTop="0dp"
...
                android:textStyle="bold"
                app:backgroundTint="@color/primary_light_blue"
                app:cornerRadius="16dp"
                app:rippleColor="@color/blue_light_visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNotifyMore"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:insetTop="0dp"
...
