...
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/primary_blue"
        app:hintTextColor="@color/primary_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNotificationContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="2"
            android:paddingVertical="10dp"
...
